# obfuscator

./: .gitignore  .gitmodules
obfuscator/: CMakeLists.txt
obfuscator/bcf/: BogusControlFlow.cpp  CMakeLists.txt  Register.cpp
obfuscator/fla/: CMakeLists.txt  Flattening.cpp  Register.cpp  SplitBasicBlocks.cpp
obfuscator/sub/: CMakeLists.txt  Register.cpp  Substitution.cpp
obfuscator/sub2/: CMakeLists.txt  CryptoUtils.cpp  Obfuscation.cpp  Obfuscation.h  Register.cpp  Substitution.cpp  Utils.cpp
test/bcf/: Makefile
test/fla/: Makefile  test.c
test/sub/: Makefile  test.c
test/sub2/: Makefile
